--- a/resume.html
+++ b/resume.html
@@ -7,5 +7,25 @@
     <title>Development Team Practice</title>
 </head>
 <body>
+    <header>
+        <h1>Anthony Santos Resume</h1>
+    </header>
+    <section>
+        <h2>Work Experience</h2>
+        <ul>
+            <li>Apple</li>
+            <li>Amazon</li>
+            <li>Google</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Skills</h2>
+        <ul>
+            <li>Javascript</li>
+            <li>CSS</li>
+            <li>HTML</li>
+            <li>Bootsrap</li>
+        </ul>
+    </section>
 </body>
 </html>
